extends Node

@onready var main_background = $MainBackground
@onready var secondary_background = $SecondaryBackground
@onready var heartbeat = $Heartbeat
@onready var game_bonus = $GameBonus
@onready var item_pick_up = $ItemPickUp
@onready var level_completion = $LevelCompletion
@onready var popsound = $Popsound
